--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">Alarm</string>
+    <string name="app_name">Lorem</string>
     <string name="service_name">ImService</string>
+
+
+    <string name="ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,Lorem Ipsum has been the industrys standard dummy text ever since but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of the leap into electronic typesetting the leap into electronic typesettingLetraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
 
 
 
